# test_repo

./: .clang-format  .clang-tidy  .gitignore  .python-version.txt  README.md  pyproject.toml  pytest.ini
.github/workflows/: build-and-lint.yml  ruff.yml
src/: CMakeLists.txt  coin_exchange.py  curry.py  euclid.py  fast polynomial calculation.c  incomplete quotient.c  jj.py  lucky tickets.c  other_pallindrom.c  other_pallindrom.h  permutation array segments.c  q.py  quick_sort.c  singly_linked_list.c  substring search.c  test  test.c  test.h  testik.c
src/Heap_sort/: Heap_sort.py
src/code/: main.py
src/homework in C /: permutation array segments.c
src/homework in C /1/: incomplete quotient.c  lucky tickets.c
src/homework in C /1 /: fast polynomial calculation.c  lucky tickets.c
src/homework in C /1 /2/: incoplete quotieent.c  the number zero elemets in the array.c
src/homework in C /2/: simple bracket balance.c  substring search.c
src/homework in Python/: euclid.py  selection sort.py
src/homework in Python/package_for_Haffman_code/: Huffman_code.py
src/homework in Python/permutation_queen/: complexity.md  first.py  second.py  third.py
src/homework_in_Python/: Heap_sort.py
src/python_tests/: test_main.py
src/quick_sort_/: quick_sort  quick_sort.c  quick_sort.s  readme.mc
src/singly_linked_list/: singly_linked_list.c  singly_linked_list.h  sorted_list.c  test_singly_list.c
src/stack/: balanced-bracket.c  balanced_bracket.c  marshalling_yard.c  stack.c  stack.h
src/tests/: test_Heap_sort.py  test_heap_sort.py
